libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/fn-generics-duplicates.jsonc
//@ run: fail
//@ description: duplicate generics should fail to compile
[
  "::kernel::special_form::fn",
  { "#tuple": ["T", "T"] },
  //~^ ERROR `T` is already declared as a generic parameter
  { "#struct": {} },
  "_",
  ["+", "a", "b"]
]
